# toke-eval

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  gate_card_template.md  generate_tasks.py  pyproject.toml  run_benchmark.py  run_inference_mlx.py
benchmark/: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  run_benchmark.py
data/: ablation_results.json  ablation_summary.json  ablation_table.csv  break_even_analysis.json  checkpoint_regression_report.json  cost_latency_results.json  cost_latency_summary.json  eval_report_gate2.json  gate1_token_counts.csv  pass_at_k_results.json  pass_at_k_summary.csv  training_curve.csv  training_curve.json
docs/: contamination-analysis.md
results/: gate1_v2.json  gate1_v3.json  gate1_v4_1000.json
scripts/: checkpoint_regression.py  constrained_decoding_ablation.py  cost_latency_benchmark.py  cross_tool_benchmark.py  error_reward_shaping.py  evalplus_format.py  evalplus_harness.py  gate2_benchmark.py  multi_tokenizer.py  pass_at_k.py  repair_loop_harness.py  shortcoder_comparison.py  statistical_analysis.py  teacher_student_loop.py  token_economy.py
solutions/: inference_stats.json  task-a-0001.toke  task-a-0009.toke  task-a-0010.toke  task-a-0015.toke  task-a-0019.toke  task-a-0025.toke  task-a-0028.toke  task-a-0030.toke  task-a-0033.toke  task-a-0035.toke  task-a-0040.toke  task-a-0042.toke  task-a-0043.toke  task-a-0047.toke  task-a-0050.toke  task-a-0051.toke  task-a-0052.toke  task-a-0058.toke  task-a-0060.toke  task-a-0061.toke  task-a-0064.toke  (+369 more)
(+453 files in other folders)
